k8s/deployment-loyalty.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loyalty
  template:
    metadata:
      labels:
        app: loyalty
    spec:
      containers:
        - name: loyalty
          image: milica764/loyalty:latest
          ports:
            - containerPort: 8050
