k8s/deployment-reservation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reservation
  template:
    metadata:
      labels:
        app: reservation
    spec:
      containers:
        - name: reservation
          image: milica764/reservation:latest
          ports:
            - containerPort: 8070
