k8s/service-loyalty.yaml
apiVersion: v1
kind: Service
metadata:
  name: loyalty
spec:
  selector:
    app: loyalty
  ports:
    - protocol: TCP
      port: 8050
      targetPort: 8050
  type: ClusterIP
