k8s/service-payment.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  selector:
    app: payment
  ports:
    - protocol: TCP
      port: 8060
      targetPort: 8060
  type: ClusterIP
