k8s/service-reservation.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation
spec:
  selector:
    app: reservation
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070
  type: ClusterIP
